(1) fix size of flipcards on mobile devices

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -305,7 +305,7 @@ footer{
 
   .flipcard {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     min-height: 140px;
   }
 
